--- a/voiceforge_frontend/package.json
+++ b/voiceforge_frontend/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "react-kavia",
+  "name": "voiceforge-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.8.1",
+    "axios": "^1.6.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.4.0",
+    "react-dropzone": "^14.2.3",
+    "wavesurfer.js": "^7.7.0",
+    "react-audio-player": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
