--- a/voiceforge_frontend/package.json
+++ b/voiceforge_frontend/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "react-router-dom": "^6.8.1",
-    "axios": "^1.6.0",
-    "@stripe/stripe-js": "^2.4.0",
     "@stripe/react-stripe-js": "^2.4.0",
-    "react-chartjs-2": "^5.2.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "mammoth": "^1.10.0",
+    "pdf-parse": "^1.1.1",
+    "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "wavesurfer.js": "^7.7.0",
-    "react-audio-player": "^0.17.0"
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "wavesurfer.js": "^7.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
